# rust_chess_core

./: .gitignore  Cargo.toml  README.jp.md  ReadMe.md  build.rs
benches/: utils.rs
chess-core/: Cargo.toml
chess-core/src/: lib.rs  perft-debug.rs  server_bin.rs  tests.rs  utils.rs
chess-core/src/core/: engine.rs
chess-core/src/online_game/: definitions.rs  handlers.rs  logic.rs  mod.rs
client/: Cargo.toml
client/src/: client.rs  gui.rs  main.rs  net-client.rs  online.rs
src/: android_bridge.rs  client.rs  definitions.rs  engine.rs  experiment.rs  game.rs  glue.rs.in  gui.rs  lib.rs  main.rs  online_game.rs  online_game_old.rs  perft-debug.rs  server.rs  server_bin.rs  tests.rs  utils.rs
src/core/: algorithms.rs  definitions.rs  engine.rs  game.rs  mod.rs  utils.rs
src/online_game/: client.rs  definitions.rs  logic.rs
src/server/: definitions.rs  handlers.rs  logic.rs  mod.rs
