[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"
default-run = "chess"

[[bin]]
name = "chess"
path = "src/main.rs"

[[bin]]
name = "experiment"
path = "src/experiment.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
eframe = "0.25.0"
egui_extras = { features = ["image"] }
env_logger = { version = "0.11.0", features = [
    "auto-color",
    "humantime",
] }
log = "0.4.20"
rand = "0.8.5"
