[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"
default-run = "chess"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "server"
path = "src/server_bin.rs"
required-features = ["build-binary"] 

[[bin]]
name = "client"
path = "src/client.rs"
required-features = ["build-binary"] 

[[bin]]
name = "chess"
path = "src/main.rs"
required-features = ["build-binary"] 

[[bin]]
name = "perft-debug"
path = "src/perft-debug.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
eframe = { version = "0.25.0", optional = true }
egui_extras = { version = "*", features = ["image"], optional = true}
env_logger = { version = "0.11.0", features = [
    "auto-color",
    "humantime",
] }
futures = "0.3.30"
log = "0.4.20"
num-traits = "0.2.18"
postcard = { version = "1.0.8", features = ["alloc"] }
rand = "0.8.5"
serde = "1.0.201"
serde_with = "3.8.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4"] }
warp = "0.3.7"

[features]
build-binary = ["eframe", "egui_extras"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "utils"
harness = false
