[package]
name = "chess-core"
version = "0.3.0"
edition = "2021"
default-run = "perft-debug"

[lib]
crate-type = ["lib"]

[[bin]]
name = "server"
path = "src/server_bin.rs"
required-features = ["network"] 

[[bin]]
name = "perft-debug"
path = "src/perft-debug.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
env_logger = { version = "0.11.0", features = [
    "auto-color",
    "humantime",
] }
log = "0.4.20"
num-traits = "0.2.18"
postcard = { version = "1.0.8", features = ["alloc"] }
rand = "0.8.5"
serde = "1.0.201"
serde_with = "3.8.1"
# Network related things
futures = { version = "0.3.30", optional = true }
tokio = { version = "1.38.2", features = ["full"], optional = true}
tokio-stream = { version = "0.1.15", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true }
tungstenite = { version = "0.21.0", optional = true }
url = { version = "2.5.4" , optional = true }
uuid = { version = "1.8.0", features = ["v4"], optional = true}
warp = { version = "0.3.7", optional = true }

[features]
network = ["futures", "tokio", "tokio-stream", "tokio-tungstenite", "url", "uuid", "warp"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "utils"
harness = false
