[package]
name = "client"
version = "0.1.0"
edition = "2024"
default-run = "standalone"

[[bin]]
name = "standalone"
path = "src/main.rs"

[[bin]]
name = "network"
path = "src/client.rs"
required-features = ["network"] 

[dependencies]
chess-core = { path = "../chess-core" }
env_logger = { version = "0.11.0", features = [
    "auto-color",
    "humantime",
] }
eframe = { version = "0.25.0" }
egui_extras = { version = "*", features = ["image"] }
# Network related
futures = { version = "0.3.30", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.15", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true }
tungstenite = { version = "0.21.0", optional = true }
url = { version = "2.5.4" , optional = true }
uuid = { version = "1.8.0", features = ["v4"], optional = true }

[features]
network = []
